[package]
name = "yukorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
yew = { version="0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.2", features = ["postgres"]}
dotenv = "0.15.0"